hphp/hack/test/typecheck/shape/shape_field_check/key_exists_unset_key_closed_shape.php
<?hh

function test(): bool {
  $s = shape('x' => 42, 'y' => 'foo');
  Shapes::removeKey(inout $s, 'x');
  return Shapes::keyExists($s, 'x');
}
